<resources>
    <string name="app_name">Yetie</string>
    <string name="welcome">Bienvenue sur Yetie.</string>
    <string name="account_create">CREER UN COMPTE</string>
    <string name="presentation">Trouvez du travail à vos conditions.</string>
    <string name="presentation_2">Travaillez où et quand vous voulez.</string>
    <string name="presentation_point_1">Inscription gratuite, sans CV ni entretien</string>
    <string name="presentation_point_2">Recevez des offres, proposez votre tarif, s\'il est accepté la mission est pour vous</string>
    <string name="presentation_point_3">Travaillez, notez, vous etes payés</string>
    <string name="whatname">Quel est votre nom ?</string>
    <string name="yourname">Votre nom</string>
    <string name="yourfirstname">Votre prénom</string>
    <string name="whatphone">Et votre mobile ?</string>
    <string name="registerphone_txt">Nous avons besoin de votre mobile pour que les managers des missions acceptées puissent vous contacter et que nous sachions comment vous joindre.</string>
    <string name="txt_confirm_number">Nous vous envoyons un SMS contenant un code pour vérifier le numéro de téléphone</string>
    <string name="ok">OK</string>
    <string name="validcode_txt">Nous venos de vous envoyer via SMS un code au\"</string>
</resources>
