<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/YetieYellow">
    <LinearLayout
        android:id="@+id/presentation_container_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Y_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="Y"
            android:textSize="90sp"/>
        <TextView
            android:id="@+id/presentation_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_presentation"
            android:alpha="0"
            android:textAlignment="center"
            android:text="@string/presentation"/>
    </LinearLayout>
    <TextView
        android:id="@+id/presentation_txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presentation_2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_presentation"
        android:alpha="0"
        android:paddingLeft="0dp"
        android:paddingRight="46dp"
        android:layout_marginTop="60dp"/>
    <LinearLayout
        android:id="@+id/presentation_points_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/presentation_txt_2"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingRight="46dp"
        android:layout_marginTop="80dp">
        <LinearLayout
            android:id="@+id/presentation_point_1"
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:alpha="0">
            <TextView
                android:layout_width="@dimen/point_box"
                android:layout_height="@dimen/point_box"
                android:text="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/YetieYellow"
                android:textSize="@dimen/txt_presentation_small"
                android:background="@drawable/rounded_corner"
                android:layout_marginRight="@dimen/point_box_margin_right"
                android:layout_marginTop="@dimen/point_box_margin_top"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_presentation_smaller"
                android:text="@string/presentation_point_1" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/presentation_point_2"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingTop="60px"
        android:alpha="0">
        <TextView
            android:layout_width="@dimen/point_box"
            android:layout_height="@dimen/point_box"
            android:text="2"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/YetieYellow"
            android:textSize="@dimen/txt_presentation_small"
            android:background="@drawable/rounded_corner"
            android:layout_marginRight="@dimen/point_box_margin_right"
            android:layout_marginTop="@dimen/point_box_margin_top"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_presentation_smaller"
            android:text="@string/presentation_point_2" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/presentation_point_3"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingTop="40px"
        android:alpha="0">
        <TextView
            android:layout_width="@dimen/point_box"
            android:layout_height="@dimen/point_box"
            android:text="3"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/YetieYellow"
            android:textSize="@dimen/txt_presentation_small"
            android:background="@drawable/rounded_corner"
            android:layout_marginRight="@dimen/point_box_margin_right"
            android:layout_marginTop="@dimen/point_box_margin_top"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_presentation_smaller"
            android:text="@string/presentation_point_3" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_marginTop="200dp"
        android:id="@+id/btn_account_create"
        android:padding="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/YetieGray"
        android:textColor="@android:color/white"
        android:text="@string/account_create"
        android:layout_below="@id/presentation_container_1"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:textSize="16sp"/>
</RelativeLayout>